[package]
name = "win-toast-notify"
version = "0.1.1"
edition = "2021"
authors = ["iKineticate"]
keywords = ["notification", "windows", "toast", "notify"]
readme = "README.md"
description = "Windows Toast Notifications"
repository = "https://github.com/iKineticate/win-toast-notify"
homepage = "https://github.com/iKineticate/win-toast-notify"
documentation = "https://docs.rs/win-toast-notify"
license = "MIT"
rust-version = "1.77.1"
exclude = ["examples/*"]

[dependencies]