[package]
name = "win-toast-notify"
version = "0.1.6"
edition = "2021"
authors = ["iKineticate"]
keywords = ["notification", "windows", "toast", "notify"]
readme = "README.md"
description = "Windows Toast Notifications"
repository = "https://github.com/iKineticate/win-toast-notify"
homepage = "https://github.com/iKineticate/win-toast-notify"
documentation = "https://docs.rs/win-toast-notify"
license = "MIT"
exclude = ["examples", "screenshots"]

[dependencies]
xml = "0.8.20"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"